--- a/figma-app/src/App.css
+++ b/figma-app/src/App.css
@@ -1,32 +1,33 @@
 body {
   padding: 0;
   margin: 0;
-  
+
 }
 
 header {
   background-color: rgb(17, 17, 17);
   height: 72px;
   width: fit-content;
-  
+
   padding: 16px 64px;
-  
+
   display: flex;
   align-items: center;
   border-bottom: 1px solid #DFDEE0;
   padding: 16px, 64px, 16px, 64px;
-  position: relative; /* Ensure header positioning is managed */
+  position: relative;
+  /* Ensure header positioning is managed */
   z-index: 10;
-  
+
 }
 
 .main {
   height: 40px;
   width: 1312px;
-  position: relative; 
+  position: relative;
   display: flex;
   justify-content: space-between;
-  
+
 
 }
 
@@ -34,9 +35,10 @@ header {
   display: flex;
   list-style: none;
 }
+
 .left ul li {
   margin-right: 20px;
- 
+
 }
 
 .left ul li a {
@@ -126,7 +128,7 @@ header {
   width: 660px;
   height: 494.5px;
   padding-top: 127.58px;
-  margin-left:  175.54px;
+  margin-left: 175.54px;
 }
 
 .IOTA-syrum>h1 {
@@ -140,52 +142,61 @@ header {
   font-style: normal;
   color: #DFDEE0;
 }
+
 .IOTA-section {
   display: flex;
 
 }
-.main-container{
+
+.main-container {
   width: 1440px;
   height: 1292px;
- background-image: linear-gradient(to bottom, #000000, #382854);
+  background-image: linear-gradient(to bottom, #000000, #382854);
 
 }
-.allimages{
+
+.allimages {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   width: 633px;
   height: 740px;
   margin-top: -93.45px;
-  
- 
+
+
 }
-.text{
+
+.text {
   height: 80px;
   width: 660px;
   font-size: 24px;
-  line-height: 40px ;
+  line-height: 40px;
   font-weight: 400;
   font-family: "Outfit", sans-serif;
   font-optical-sizing: auto;
   font-style: normal;
   color: #DFDEE0;
 }
-.allimages img{
- 
+
+.allimages img {
+
   border-radius: 21.61px;
 }
-.first, .second, .third {
+
+.first,
+.second,
+.third {
   z-index: 2;
   opacity: 1;
 }
-.backgroundimage{
+
+.backgroundimage {
   display: flex;
   justify-content: center;
 }
 
 /* How it works section */
 
-.how-works{
+.how-works {
   display: flex;
   background-image: linear-gradient(to top, #000000, #382854);
   width: 1440px;
@@ -193,15 +204,17 @@ header {
   align-items: center;
 
 }
-.how-works>div>img{
+
+.how-works>div>img {
   height: 508px;
   width: 816px;
   margin-top: 75.86px;
   border-radius: 16px;
 
 }
-.how-works>div>h1{
-  color:#DFDEE0 ;
+
+.how-works>div>h1 {
+  color: #DFDEE0;
   font-size: 64px;
   line-height: 64px;
   font-family: "Outfit", sans-serif;
@@ -209,8 +222,9 @@ header {
   font-style: normal;
   margin-left: 20px;
 }
-.how-works>div>h3{
-  color:#5CC3FA ;
+
+.how-works>div>h3 {
+  color: #5CC3FA;
   font-size: 48px;
   line-height: 64px;
   font-family: "Outfit", sans-serif;
@@ -218,37 +232,93 @@ header {
   font-style: normal;
   margin-left: 20px;
 }
-.how-works>div>p{
-  color:#DFDEE0 ;
+
+.how-works>div>p {
+  color: #DFDEE0;
   font-size: 48px;
   line-height: 64px;
   font-family: "Outfit", sans-serif;
   font-optical-sizing: auto;
   font-style: normal;
   margin-left: 20px;
-  
+
 }
-.text-container{
+
+.text-container {
   width: 596px;
   height: 352px;
   gap: 32px;
 }
 
 /* Categories */
-.categories{
+.categories {
   display: flex;
+  width: 1440px;
+
   flex-wrap: wrap;
   gap: 20px;
   background-image: linear-gradient(to top, #382854, #000000);
   justify-content: center;
 
-  
+
 
 }
-.categories p{
+
+.categories p {
   padding: 20px 40px;
   background-image: linear-gradient(to top, #583D80, #FFFFFF);
   border-radius: 5px;
 
-  
+
+}
+
+.images-grid {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 20px;
+  height: 1280px;
+  width: 1440px;
+  padding: 96px, 64px, 96px, 64px;
+  background-image: linear-gradient(to bottom, #382854, #000000);
+  padding-top: 100px;
+
+}
+
+/* tokenmonics */
+.lists {
+  display: flex;
+  justify-content: space-around;
+  line-height: 50px;
+  font-family: "Outfit", sans-serif;
+  font-optical-sizing: auto;
+  font-style: normal;
+
+}
+
+.lists ul li {
+  list-style: none;
+  color: #DFDEE0;
+}
+
+.gradient-text {
+  font-family: "Outfit", sans-serif;
+  font-optical-sizing: auto;
+  font-style: normal;
+  text-align: center;
+  background: linear-gradient(to right, #FA75F8, #9E6EE6);
+  /* Define your gradient colors */
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  font-size: 48px;
+  line-height: 64px;
+
+
+}
+
+.tokenomics {
+   width: 1440px;
+  background-image: linear-gradient(to top, #382854, #000000);
+  margin-top: -40px;
+  padding-top: 100px;
 }
